--- a/_posts/2023-06-23-MySQL1.md
+++ b/_posts/2023-06-23-MySQL1.md
@@ -5,15 +5,11 @@ date: 2023-06-23 14:30:00
 toc: true
 ---
 
-
-
-
-
 MySQL 可以分为 Server 层和存储引擎层两部分
 <br/>
-# ch1 MySQL架构
+### ch1 MySQL架构
 
-# MySQL 的逻辑架构
+### MySQL 的逻辑架构
 
 MySQL 可以分为 Server 层和存储引擎层两部分
 
